--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">Student Management System</a>
+    <h3 class="navbar-brand" >Student Management System</h3>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -22,51 +22,107 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/student/list}">Dashboard</a>
+                <a class="nav-link" th:href="@{/admin/list}">Dashboard</a>
             </li>
-
+            <li clas="nav-item">
+                <a th:href = "@{/admin/addnew}" class = "nav-link"> Add User</a>
+            </li>
+            <li class="nav-item">
+                <a th:href="@{/admin/uploadpage}" class = "nav-link" target="_blank">Upload</a>
+            </li>
         </ul>
     </div>
 </nav>
 
 <div class ="container">
     <div class = "row">
-        <h1> List students </h1>
-        <h1>Hi This is Admin page...</h1>
+        <h1>Hi Admin.. Here is the List Of Users </h1><br>
 
     </div>
-
+<br>
     <div class = "row">
         <div class = "col-lg-3">
-            <a th:href = "@{/student/addnew}" class = "btn btn-primary btn-sm mb-3"> Add students</a>
+
+        </div>
+        <div align="right">
         </div>
     </div>
+    <!-- ... existing content ... -->
 
-    <form action="#" th:action="@{/student/fetchbyfirstname}" th:object="${studentlist}" method="GET">
+    <form action="#" th:action="@{/admin/fetchbyfirstname}" th:object="${adminlist}" method="GET">
         <input type="text" name="keyword" th:value="${keyword}" placeholder="Type to search" class="form-control mb-4 col-4">
         <button type="submit" class="btn btn-primary">Search</button>
     </form> <br>
+
+<!--    <nav aria-label="Page navigation">-->
+<!--        <ul class="pagination">-->
+<!--            <li class="page-item" th:classappend="${currentPage == 0 ? 'disabled' : ''}">-->
+<!--                <a class="page-link" th:href="@{/admin/list(page=0)}">First</a>-->
+<!--            </li>-->
+<!--            <li class="page-item" th:classappend="${currentPage == 0 ? 'disabled' : ''}">-->
+<!--                <a class="page-link" th:href="@{/admin/list(page=${currentPage - 1})}">Previous</a>-->
+<!--            </li>-->
+<!--            <li class="page-item" th:each="i : ${#numbers.sequence(0, adminlist.totalPages - 1)}"-->
+<!--                th:classappend="${currentPage == i ? 'active' : ''}">-->
+<!--                <a class="page-link" th:href="@{/admin/list(page=${i})}" th:text="${i + 1}"></a>-->
+<!--            </li>-->
+<!--            <li class="page-item" th:classappend="${currentPage == adminlist.totalPages - 1 ? 'disabled' : ''}">-->
+<!--                <a class="page-link" th:href="@{/admin/list(page=${currentPage + 1})}">Next</a>-->
+<!--            </li>-->
+<!--            <li class="page-item" th:classappend="${currentPage == adminlist.totalPages - 1 ? 'disabled' : ''}">-->
+<!--                <a class="page-link" th:href="@{/admin/list(page=${adminlist.totalPages - 1})}">Last</a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+
+<!--    <button class="btn btn-primary btn-sm mb-3">-->
+    <div align="right" th:if="${totalPages > 1}">
+        <a  th:href="@{/admin/download(page=${pageNumber}, sortBy=${sortBy}, sortOrder=${sortOrder})}" class = "btn btn-primary" target="_blank">Export as .xlsx</a>
+<!--    </button>-->
+        <ul class="pagination">
+            <li class="page-item" th:class="${currentPage == 0} ? 'disabled' : ''">
+                <a th:href="@{/admin/list(page=0, sortBy=${sortBy}, sortOrder=${sortOrder})}">First</a>
+            </li>
+            <li th:each="pageNumber : ${#numbers.sequence(0, totalPages - 1)}" th:class="${currentPage == pageNumber} ? 'active' : ''">
+                <a th:href="@{/admin/list(page=${pageNumber}, sortBy=${sortBy}, sortOrder=${sortOrder})}" th:text="${pageNumber + 1}"></a>
+            </li>
+            <li th:class="${currentPage == totalPages - 1} ? 'disabled' : ''">
+                <a th:href="@{/admin/list(page=${totalPages - 1}, sortBy=${sortBy}, sortOrder=${sortOrder})}">Last</a>
+            </li>
+        </ul>
+    </div>
+
     <table class = "table table-striped table-bordered">
         <thead class = "table-dark">
         <tr>
-            <th> First Name</th>
-            <th> Last Name</th>
-            <th> Email</th>
+            <th>
+                <a th:href="@{/admin/list(page=0, sortBy='firstname', sortOrder=${sortOrder == 'asc' ? 'desc' : 'asc'})}">
+                    First Name</a> </th>
+            <th>
+                <a th:href="@{/admin/list(page=0, sortBy='lastname', sortOrder=${sortOrder == 'asc' ? 'desc' : 'asc'})}">
+                Last Name</a></th>
+            <th>
+                <a th:href="@{/admin/list(page=0, sortBy='email', sortOrder=${sortOrder == 'asc' ? 'desc' : 'asc'})}">
+                Email</a></th>
+            <th>
+                <a th:href="@{/admin/list(page=0, sortBy='roles', sortOrder=${sortOrder == 'asc' ? 'desc' : 'asc'})}">
+                Role</a> </th>
             <th> Actions </th>
         </tr>
         </thead>
 
         <tbody>
 
-        <tr th:each = "students: ${studentlist}">
-            <td th:text = "${students.firstname}"></td>
-            <td th:text = "${students.lastname}"></td>
-            <td th:text = "${students.email}"></td>
+        <tr th:each = "admins: ${adminlist}">
+            <td th:text = "${admins.firstname}"></td>
+            <td th:text = "${admins.lastname}"></td>
+            <td th:text = "${admins.email}"></td>
+            <td th:text = "${admins.isadmin}"></td>
             <td>
-                <a th:href = "@{/student/edit/{id}(id=${students.id})}"
+                <a th:href = "@{/admin/edit/{email}(email=${admins.email})}"
                    class = "btn btn-primary">Update</a>
 
-                <a th:href = "@{/student/delete/{id}(id=${students.id})}"
+                <a th:href = "@{/admin/delete/{email}(email=${admins.email})}"
                    class = "btn btn-danger">Delete</a>
 
             </td>
