--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -31,19 +31,13 @@
 
 <div class ="container">
     <div class = "row">
-        <h1> List students </h1>
+        <h1>
+            Students Record</h1>
+    </div>
+    <div align="right" >
+        <a class="btn btn-primary btn-sm mb-3" th:href="@{/student/download}" target="_blank">Export as .xlsx</a>
     </div>
 
-    <div class = "row">
-        <div class = "col-lg-3">
-            <a th:href = "@{/student/addnew}" class = "btn btn-primary btn-sm mb-3"> Add students</a>
-        </div>
-    </div>
-
-    <form action="#" th:action="@{/student/fetchbyfirstname}" th:object="${studentlist}" method="GET">
-        <input type="text" name="keyword" th:value="${keyword}" placeholder="Type to search" class="form-control mb-4 col-4">
-        <button type="submit" class="btn btn-primary">Search</button>
-    </form> <br>
     <table class = "table table-striped table-bordered">
         <thead class = "table-dark">
         <tr>
@@ -61,11 +55,11 @@
             <td th:text = "${students.lastname}"></td>
             <td th:text = "${students.email}"></td>
             <td>
-                <a th:href = "@{/student/edit/{id}(id=${students.id})}"
+                <a th:href = "@{/student/edit/{email}(email=${students.email})}"
                    class = "btn btn-primary">Update</a>
 
-                <a th:href = "@{/student/delete/{id}(id=${students.id})}"
-                   class = "btn btn-danger">Delete</a>
+<!--                <a th:href = "@{/student/delete/{id}(id=${students.id})}"-->
+<!--                   class = "btn btn-danger">Delete</a>-->
 
             </td>
         </tr>
