--- a/src/main/resources/templates/updateuser.html
+++ b/src/main/resources/templates/updateuser.html
@@ -38,12 +38,16 @@
     <!-- Add hidden form field to handle update -->
     <input type="hidden" th:field="*{userid}" />
 
+    First name
     <input type="text" th:field="*{firstname}" class="form-control mb-4 col-4">
 
+    Last name
     <input type="text" th:field="*{lastname}" class="form-control mb-4 col-4">
 
+    Email
     <input type="text" th:field="*{email}" class="form-control mb-4 col-4">
 
+    Is Admin
     <input type="text" th:field="*{isadmin}" class="form-control mb-4 col-4">
     <input type="hidden" th:field="*{password}" />
 
