--- a/src/main/resources/templates/addstudent.html
+++ b/src/main/resources/templates/addstudent.html
@@ -25,7 +25,7 @@
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
 		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/student/list}">Dashboard</a>
+				<a class="nav-link" th:href="@{/admin/list}">Dashboard</a>
 			</li>
 
 		</ul>
@@ -34,7 +34,9 @@
 <div class="container">
 	<hr>
 	<h2>Add new Student</h2>
-
+	<div th:if="${message}">
+		<p th:text="${message}" style="color: red;"></p>
+	</div>
 	<form action="#" th:action="@{/admin/newuser}" th:object="${newuser}" method="get">
 
 		<div class="form-group">
